# Oxide-Core

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/oxide_asset/: Cargo.toml  README.md
crates/oxide_asset/src/: assets.rs  handle.rs  lib.rs  mesh_cache.rs  server.rs
crates/oxide_ecs/: Cargo.toml  README.md
crates/oxide_ecs/benches/: component_iteration.rs
crates/oxide_ecs/src/: lib.rs
crates/oxide_ecs_derive/: Cargo.toml  README.md
crates/oxide_ecs_derive/src/: lib.rs
crates/oxide_engine/: Cargo.toml  README.md
crates/oxide_engine/src/: app.rs  event.rs  lib.rs  prelude.rs  time.rs  watcher.rs  window.rs
crates/oxide_engine/src/asset/: mod.rs
crates/oxide_engine/src/camera/: controller.rs  mod.rs  uniform.rs
crates/oxide_engine/src/ecs/: mod.rs  resource.rs  world.rs
crates/oxide_engine/src/input/: keyboard.rs  mod.rs  mouse.rs
crates/oxide_engine/src/light/: components.rs  mod.rs  system.rs  uniform.rs
crates/oxide_engine/src/render/: mod.rs
crates/oxide_engine/src/scene/: gltf_hierarchy.rs  hierarchy.rs  mesh_renderer.rs  mod.rs  propagate.rs  transform.rs
crates/oxide_engine/src/ui/: egui_manager.rs  egui_pass.rs  mod.rs
crates/oxide_input/: Cargo.toml  README.md
crates/oxide_input/src/: keyboard.rs  lib.rs  mouse.rs
crates/oxide_math/: Cargo.toml  README.md
crates/oxide_math/src/: camera.rs  lib.rs  prelude.rs  transform.rs
crates/oxide_physics/: Cargo.toml
crates/oxide_physics/src/: character_controller.rs  components.rs  debug_plugin.rs  events.rs  joints.rs  lib.rs  mass_properties.rs  math.rs  plugin.rs  prelude.rs  queries.rs  resources.rs  systems.rs
crates/oxide_physics/src/collision/: broadphase.rs  mod.rs
crates/oxide_renderer/: Cargo.toml  README.md
crates/oxide_renderer/shaders/: debug_lines.wgsl  fallback.wgsl  lit.wgsl  sky_gradient.wgsl  sprite_ui.wgsl
crates/oxide_renderer/src/: adapter.rs  debug_lines.rs  depth.rs  descriptor.rs  device.rs  lib.rs  material.rs  pipeline.rs  prelude.rs  shader.rs  surface.rs
crates/oxide_renderer/src/gltf/: loader.rs  mod.rs
crates/oxide_renderer/src/mesh/: mod.rs  primitive.rs  vertex.rs
crates/oxide_renderer/src/texture/: fallback.rs  mod.rs  sampler.rs
crates/oxide_transform/: Cargo.toml  README.md
crates/oxide_transform/src/: lib.rs
examples/hello_window/: Cargo.toml  README.md
examples/hello_window/assets/materials/: custom_scene.json  scene_lit.json
examples/hello_window/assets/shaders/: custom_scene.wgsl
examples/hello_window/src/: main.rs
examples/physics_example/: Cargo.toml
examples/physics_example/src/: main.rs
examples/sky_gradient_example/: Cargo.toml  README.md
examples/sky_gradient_example/src/: main.rs
examples/sprite_ui_example/: Cargo.toml  README.md
examples/sprite_ui_example/src/: main.rs
examples/unlit_example/: Cargo.toml  README.md
examples/unlit_example/src/: main.rs
shaders/: basic.wgsl  fallback.wgsl  lit.wgsl  unlit.wgsl
