[workspace]
resolver = "2"
members = [
    "crates/oxide_engine",
    "crates/oxide_renderer",
    "crates/oxide_math",
    "examples/hello_window",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Oxide Core Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
wgpu = "28.0.0"
winit = "0.30"
glam = "0.32.1"
bevy_ecs = "0.16.1"
bytemuck = { version = "1.21", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1