[workspace]
resolver = "2"
members = [
    "crates/oxide_asset",
    "crates/oxide_ecs",
    "crates/oxide_ecs_derive",
    "crates/oxide_engine",
    "crates/oxide_input",
    "crates/oxide_renderer",
    "crates/oxide_math",
    "crates/oxide_transform",
    "examples/hello_window",
    "examples/unlit_example",
    "examples/sky_gradient_example",
    "examples/sprite_ui_example",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["Oxide Core Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
wgpu = "28.0.0"
winit = "0.30"
glam = "0.32.1"
oxide_ecs = { path = "crates/oxide_ecs" }
oxide_ecs_derive = { path = "crates/oxide_ecs_derive" }
oxide_asset = { path = "crates/oxide_asset" }
oxide_input = { path = "crates/oxide_input" }
oxide_transform = { path = "crates/oxide_transform" }
bytemuck = { version = "1.21", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
