[package]
name = "oxide_ecs"
description = "Oxide Core ECS runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
oxide_ecs_derive.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "component_iteration"
harness = false
