[package]
name = "oxide_engine"
description = "Oxide Core engine - main game engine crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxide_renderer = { path = "../oxide_renderer" }
oxide_math = { path = "../oxide_math" }
oxide_transform.workspace = true
oxide_input.workspace = true
oxide_ecs.workspace = true
oxide_asset.workspace = true
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
pollster = "0.4"
notify = "8.2.0"
egui = "0.33"
egui-winit = "0.33"

[features]
default = []
trace = ["tracing/release_max_level_trace"]
