[package]
name = "oxide-core-engine"
description = "Oxide Core engine - main game engine crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "oxide_engine"

[dependencies]
oxide_renderer.workspace = true
oxide_math.workspace = true
oxide_transform.workspace = true
oxide_input.workspace = true
oxide_ecs.workspace = true
oxide_asset.workspace = true
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
pollster = "0.4"
notify = "8.2.0"
egui = "0.33"
egui-winit = "0.33"

[features]
default = []
trace = ["tracing/release_max_level_trace"]
