[package]
name = "oxide_renderer"
description = "Oxide Core renderer - wgpu-based rendering abstraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []