[package]
name = "oxide_renderer"
description = "Oxide Core renderer - wgpu-based rendering abstraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ron = "0.12.0"
toml = "1.0.6"
naga = { version = "28.0.0", features = ["wgsl-in"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }

[features]
default = []
