[package]
name = "oxide_transform"
description = "Oxide Core transform and hierarchy primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oxide_ecs.workspace = true
oxide_math = { path = "../oxide_math" }
glam.workspace = true
