[package]
name = "oxide-core-transform"
description = "Oxide Core transform and hierarchy primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "oxide_transform"

[dependencies]
oxide_ecs.workspace = true
oxide_math.workspace = true
glam.workspace = true
