[package]
name = "physics_example"
description = "Oxide Core example - in-house physics integration demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
oxide_engine.workspace = true
oxide_physics.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
